# ideal-gas

./: .gitignore  Cargo.toml
src/: main.rs  simulation.rs
