[package]
name = "rapier-bevy-tets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
csv = "1.1.6"
num = "0.4.0"
rand = "0.8.4"
serde = "1.0.131"
serde_derive = "1.0.131"
rand_distr = "0.4.3"